specs/guestbook-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-ui
  namespace: default
spec:
  selector:
    matchLabels:
      app: guestbook-ui
  template:
    metadata:
      labels:
        app: guestbook-ui
    spec:
      containers:
        - image: nginx:alpine
          name: guestbook-ui
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: config-volume
            - mountPath: /usr/share/nginx/nice
              name: pv-storage
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "100Mi"
      volumes:
        - name: config-volume
          configMap:
            name: guestbook-ui-config
        - name: pv-storage
          persistentVolumeClaim:
            claimName: guestbook-pv-claim
