specs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-ui
  namespace: default
spec:
  type: ClusterIP
#  loadBalancerIP: 198.19.249.167
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: guestbook-ui
