specs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui-ingress
  namespace: default
spec:
  ingressClassName: kong
  rules:
    - host: guestbook.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui-service
                port:
                  number: 80
  tls:
    - hosts:
        - guestbook.local
      secretName: guestbook-tls
